--- a/deploy-dev.yaml
+++ b/deploy-dev.yaml
@@ -138,6 +138,10 @@ paths:
                     balance:
                       updated_at: 1515697663
                       current_display_value: '2 stamps'
+                      loyalty_currency_name: 'stamps'
+                      prefix: null
+                      suffix: 'stamps'
+                      value: 2
                     transactions:
                       - id: "100982384448"
                         timestamp: 1517549941
@@ -206,6 +210,10 @@ paths:
                     balance:
                       updated_at: 
                       current_display_value:
+                      loyalty_currency_name: 
+                      prefix: 
+                      suffix: 
+                      value: 
                     transactions:
                       []
                     vouchers:
@@ -302,6 +310,10 @@ paths:
                     balance:
                       updated_at: 1515697663
                       current_display_value: '2 stamps'
+                      loyalty_currency_name: 'stamps'
+                      prefix: null
+                      suffix: 'stamps'
+                      value: 2
                     transactions:
                       - id: "100982384448"
                         timestamp: 1517549941
@@ -440,6 +452,10 @@ paths:
                     balance:
                       updated_at: 1515697663
                       current_display_value: '2 stamps'
+                      loyalty_currency_name: 'stamps'
+                      prefix: null
+                      suffix: 'stamps'
+                      value: 2
                   - id: 85
                     loyalty_plan_id: 105
                     loyalty_plan_name: "Iceland Bonus Card"
@@ -2245,6 +2261,31 @@ components:
           description: "Current loyalty balance as supplied by the merchant."
           example: '100 points'
           minimum: 0
+        loyalty_currency_name:
+          type: string
+          description: "The currency of the loyalty plan balance, such as points, GBP or stamps"
+          example: 'points'
+        prefix:
+          type: string
+          example: '£'
+          description: "Pre-qualifier for earned and target values - usually a currency symbol."
+          minLength: 0
+          maxLength: 50
+          pattern: "[\\u0000-\\u2FFF]+"
+        suffix:
+          type: string
+          example: 'stamps'
+          description: "Post-qualifier for earned and target values such as stamps or visits."
+          minLength: 0
+          maxLength: 50
+          pattern: "[\\u0000-\\u2FFF]+"
+        value:
+          type: number
+          example: 7
+          description: "Target spend value before gaining a reward."
+          minimum: 0
+          maximum: 9999999
+          
     Wallet:
       type: object
       properties:
