--- a/deploy-sandbox.yaml
+++ b/deploy-sandbox.yaml
@@ -3,7 +3,21 @@ openapi: "3.0.0"
 info:
   version: '2.0'
   title: Bink API
-  description: 'This document defines the Bink API URLs, parameters, request bodies, responses. Each operation offers a mock end point. Regex patterns, minLength, and maxLength parameters are for front-end guidance only.'
+  description: "This document defines the Bink API and details the following:
+    <ul>
+      <li>URLs.</li> 
+      <li>Parameters.</li>
+      <li>Request bodies - Including regex patterns and min/max length of input fields.</li>
+      <li>Responses.</li>
+    </ul>
+
+    The document also offers guidance on how the Bink platform works. This includes detailing business concepts, naming conventions and how to use the API through all supported journeys.
+    <br><br>
+    Document links:
+    <ul>
+      <li> [Version History](API_Change_Log.html)</li>
+      <li> [Appendix](API_Appendix.html)</li>
+    </ul>"
   contact:
     email: mmorar@bink.com
   x-logo: 
@@ -69,7 +83,7 @@ paths:
       tags:
         - Wallet
       summary: Retrieve a User’s Wallet
-      operationId: GET /wallets
+      operationId: GET /wallet
       description: "Used to display the full contents of a user's wallet including:
         <br>
           <ol>
@@ -138,6 +152,10 @@ paths:
                     balance:
                       updated_at: 1515697663
                       current_display_value: '2 stamps'
+                      loyalty_currency_name: 'stamps'
+                      prefix: null
+                      suffix: 'stamps'
+                      value: 2
                     transactions:
                       - id: "100982384448"
                         timestamp: 1517549941
@@ -206,6 +224,10 @@ paths:
                     balance:
                       updated_at: 
                       current_display_value:
+                      loyalty_currency_name: 
+                      prefix: 
+                      suffix: 
+                      value: 
                     transactions:
                       []
                     vouchers:
@@ -246,6 +268,132 @@ paths:
               schema:
                 allOf:
                   - $ref: '#/components/schemas/genericresponse401'
+  /wallet/loyalty_cards/{loyalty_card_id}:
+    get:
+      security: 
+        - bearerAuth: []
+      tags:
+        - Wallet
+      summary: Retrieve a single Loyalty Card from a User's Wallet
+      operationId: GET /wallet/loyalty_cards/{loyalty_card_id}
+      description: "Used to display a single loyalty card from a user's wallet, including:
+        <br>
+          <ol>
+              <ul>
+                <li>Status.</li>
+                <li>Images.</li>
+                <li>Balance details.</li>
+                <li>Transactions.</li>
+                <li>Vouchers.</li>
+                <li>PLL Links.</li>
+              </ul>
+            </li>
+            </li>
+          </ol>"
+      parameters:
+        - in: path
+          name: loyalty_card_id
+          description: "The unique resource identifier for the Loyalty Card."
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: "**Successful**"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: 
+                  loyalty_card: 
+                    $ref: '#/components/schemas/WalletSingleLoyaltyCard'
+              example:
+                    id: 81
+                    loyalty_plan_id: 316
+                    loyalty_plan_name: "Wasabi Club"
+                    status:
+                      state: "authorised"
+                      slug:
+                      description: 
+                    images:
+                      - id: 290
+                        type: 0
+                        url: 'https://api.staging.gb.bink.com/content/media/hermes/schemes/Wasabi_hero_1968x732.png'
+                        description: "Card Image for Wasabi hero."
+                        encoding: "png"                      
+                    balance:
+                      updated_at: 1515697663
+                      current_display_value: '2 stamps'
+                      loyalty_currency_name: 'stamps'
+                      prefix: null
+                      suffix: 'stamps'
+                      value: 2
+                    transactions:
+                      - id: "100982384448"
+                        timestamp: 1517549941
+                        description: "Paddington Station £7.45"
+                        display_value: "1 stamp"
+                      - id: "100982345321"
+                        timestamp: 1517549941
+                        description: "Paddington Station £9.55"
+                        display_value: "1 stamp"
+                    vouchers:
+                      - state: "inprogress"
+                        earn_type: "stamps"
+                        reward_text: "Meal Voucher"
+                        headline: "Spend £7.00 or more to get a stamp. Collect 7 stamps to get a Meal Voucher of up to £7 off your next meal"
+                        voucher_code:
+                        barcode_type: 0
+                        progress_display_text: "2/7 stamps"
+                        prefix:
+                        suffix: 'stamps'
+                        current_value: 2
+                        target_value: 7
+                        body_text: null
+                        terms_and_conditions: "http://baseurl/terms/terms.html%22"
+                        issued_date: null
+                        expiry_date: null
+                        redeemed_date:
+                      - state: "issued"
+                        earn_type: "stamps"
+                        reward_text: "Meal Voucher"
+                        headline: "Earned"
+                        voucher_code: "5544332211"
+                        barcode_type: 1
+                        progress_display_text:
+                        prefix:
+                        suffix:
+                        current_value: 
+                        target_value: 
+                        body_text: null
+                        terms_and_conditions: "http://baseurl/terms/terms.html%22"
+                        issued_date: 1517549941
+                        expiry_date: 1617549941
+                        redeemed_date:
+                    card:
+                      barcode: "633174911234567898"
+                      barcode_type: 0
+                      card_number: "633174911234567898"
+                      colour: '#FFFFFF'
+                      text_colour: '#FFFFFF'
+                    pll_links:
+                      - payment_account_id: 555
+                        payment_scheme: VISA
+                        status: active
+        '401':
+          description: Not authorised, request does not have a valid token
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/genericresponse401'
+        '404':
+          description: "Resource specified could not be found"
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/genericresponse404'    
   /wallet_overview:
     get:
       security:
@@ -309,6 +457,7 @@ paths:
                       state: "authorised"
                       slug:
                       description:
+                    reward_available: true
                     images:
                       - id: 290
                         type: 0
@@ -318,6 +467,16 @@ paths:
                     balance:
                       updated_at: 1515697663
                       current_display_value: '2 stamps'
+                      loyalty_currency_name: 'stamps'
+                      prefix: null
+                      suffix: 'stamps'
+                      value: 2
+                    card:
+                      barcode: 
+                      barcode_type: 0
+                      card_number: "63317491123434566"
+                      colour: '#FFFFFF'
+                      text_colour: '#FFFFFF'
                   - id: 85
                     loyalty_plan_id: 105
                     loyalty_plan_name: "Iceland Bonus Card"
@@ -325,6 +484,7 @@ paths:
                       state: "authorised"
                       slug:
                       description:
+                    reward_available: false
                     images:
                       - id: 1234
                         type: 0
@@ -334,6 +494,12 @@ paths:
                     balance:
                       updated_at: 1515697663
                       current_display_value: '£0'
+                    card:
+                      barcode: "633174911234567890"
+                      barcode_type: 0
+                      card_number: "633174911234567898"
+                      colour: '#FFFFFF'
+                      text_colour: '#FFFFFF'
                 payment_accounts:
                   - id: 556
                     provider: 'Visa'
@@ -1181,7 +1347,7 @@ paths:
       tags:
         - Loyalty Cards
       summary: "View Loyalty Card balance"
-      operationId: GET /loyalty_plans/{loyalty_plan_id}/balance
+      operationId: GET /loyalty_cards/{loyalty_card_id}/balance
       description: "Provides current balance information for the user's **Loyalty Card**."
       parameters:
         - in: path
@@ -1221,7 +1387,7 @@ paths:
       tags:
         - Loyalty Cards
       summary: "View Loyalty transactions"
-      operationId: GET /loyalty_plans/{loyalty_plan_id}/transactions
+      operationId: GET /loyalty_cards/{loyalty_card_id}/transactions
       description: "Provides a list of the last 5 Loyalty transactions for the user's **Loyalty Card**"
       parameters:
         - in: path
@@ -1261,7 +1427,7 @@ paths:
       tags:
         - Loyalty Cards
       summary: "View Loyalty Card vouchers"
-      operationId: GET /loyalty_plans/{loyalty_plan_id}/vouchers
+      operationId: GET /loyalty_cards/{loyalty_card_id}/vouchers
       description: "Provides a list of the vouchers attached to the user's **Loyalty Card**. <br>The different Voucher statuses that can be returned are:
         <ul>
           <li><code>in_progress</code></li>
@@ -2123,6 +2289,31 @@ components:
           description: "Current loyalty balance as supplied by the merchant."
           example: '100 points'
           minimum: 0
+        loyalty_currency_name:
+          type: string
+          description: "The currency of the loyalty plan balance, such as points, GBP or stamps"
+          example: 'points'
+        prefix:
+          type: string
+          example: '£'
+          description: "Pre-qualifier for earned and target values - usually a currency symbol."
+          minLength: 0
+          maxLength: 50
+          pattern: "[\\u0000-\\u2FFF]+"
+        suffix:
+          type: string
+          example: 'stamps'
+          description: "Post-qualifier for earned and target values such as stamps or visits."
+          minLength: 0
+          maxLength: 50
+          pattern: "[\\u0000-\\u2FFF]+"
+        value:
+          type: number
+          example: 7
+          description: "Target spend value before gaining a reward."
+          minimum: 0
+          maximum: 9999999
+          
     Wallet:
       type: object
       properties:
@@ -2143,6 +2334,17 @@ components:
             description: "A list of all Payment Accounts in the user's wallet."
             items:
               $ref: '#/components/schemas/WalletPaymentAccounts'
+
+    WalletSingleLoyaltyCard:
+      type: object
+      properties:
+          loyalty_card:
+            type: array
+            description: "Returns the details of a single loyalty card"
+            items:
+              allOf:
+                - $ref: '#/components/schemas/LoyaltyCards'
+                - $ref: '#/components/schemas/WalletLoyaltyCardDetails'
 
     WalletOverview: 
       type: object
@@ -2188,6 +2390,12 @@ components:
           $ref: '#/components/schemas/Images'
         balance:
           $ref: '#/components/schemas/LoyaltyCardBalance'
+        reward_available:
+          type: boolean
+          example: true
+          description: "Indicates whether an issued reward is available for this loyalty card or not."
+        card:
+          $ref: '#/components/schemas/LoyaltyCardProperties'
 
     LoyaltyCards:      
       type: object
@@ -2268,6 +2476,8 @@ components:
           $ref: '#/components/schemas/Images'
         balance:
           $ref: '#/components/schemas/LoyaltyCardBalance'
+        card:
+          $ref: '#/components/schemas/LoyaltyCardProperties'
 
     LoyaltyCardPLLLinks:
       type: object
@@ -2927,7 +3137,7 @@ components:
               consents:
                 - order: 8
                   name: "notification_marketing"
-                  is_acceptance_required: true
+                  is_acceptance_required: false
                   description: "Check this box to receive notifications"
         join_fields:
           description: "The fields that need to be presented to the user in order to become a new member of the Loyalty Plan."
@@ -2996,7 +3206,7 @@ components:
               consents:
                 - order: 7
                   name: "notification_marketing"
-                  is_acceptance_required: true
+                  is_acceptance_required: false
                   description: "Check this box to receive notifications"
         add_fields:
           description: "The fields that need to be presented to the user in order to Add an existing Loyalty Card as Store type to the user's wallet."
@@ -3106,7 +3316,13 @@ components:
           pattern: "[\\u0000-\\u2FFF]+"
         type:
           type: string
-          description: "The field type, E.g. text, boolean, choice (for a drop-down list), etc."
+          description: "Supported field types are:
+            <ul>
+              <li> <code>text</code>       </li>
+              <li> <code>sensitive</code>  </li>
+              <li> <code>choice</code>     </li>
+              <li> <code>boolean</code>    </li>
+            </ul>"
           example: text
           pattern: "[\\u0000-\\u2FFF]+"
         is_sensitive:
