--- a/deploy-dev.yaml
+++ b/deploy-dev.yaml
@@ -155,7 +155,8 @@ paths:
                       loyalty_currency_name: 'stamps'
                       prefix: null
                       suffix: 'stamps'
-                      value: 2
+                      current_value: 2
+                      target_value: 7
                     transactions:
                       - id: "100982384448"
                         timestamp: 1517549941
@@ -227,7 +228,8 @@ paths:
                       loyalty_currency_name: 
                       prefix: 
                       suffix: 
-                      value: 
+                      current_value: 
+                      target_value:
                     transactions:
                       []
                     vouchers:
@@ -325,7 +327,8 @@ paths:
                       loyalty_currency_name: 'stamps'
                       prefix: null
                       suffix: 'stamps'
-                      value: 2
+                      current_value: 2
+                      target_value: 7
                     transactions:
                       - id: "100982384448"
                         timestamp: 1517549941
@@ -468,7 +471,8 @@ paths:
                       loyalty_currency_name: 'stamps'
                       prefix: null
                       suffix: 'stamps'
-                      value: 2
+                      current_value: 2
+                      target_value: 7
                     card:
                       barcode: 
                       barcode_type: 0
@@ -492,6 +496,11 @@ paths:
                     balance:
                       updated_at: 1515697663
                       current_display_value: '£0'
+                      loyalty_currency_name: 'GBP'
+                      prefix: '£'
+                      suffix: 
+                      current_value: 0
+                      target_value: 
                     card:
                       barcode: "633174911234567890"
                       barcode_type: 0
@@ -2305,12 +2314,18 @@ components:
           minLength: 0
           maxLength: 50
           pattern: "[\\u0000-\\u2FFF]+"
-        value:
+        current_value:
+          type: number
+          example: 2
+          description: "Current value held on the given Loyalty Card."
+          minimum: 0
+          maximum: 9999999
+        target_value:
           type: number
           example: 7
           description: "Target spend value before gaining a reward."
           minimum: 0
-          maximum: 9999999
+          maximum: 999999
           
     Wallet:
       type: object
